fix: Revise md-source-file__notify class so that announcements work on small screens.

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -95,7 +95,8 @@
 .md-source-file__notify {
     align-items: center;
     color: var(--md-default-bg-color);
-    display: inline-flex;
+    /* display: inline-flex; */
+    /* display: flex; */
     font-size: .68rem;
     gap: .3rem;
 }
